--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,8 +18,8 @@ android {
         applicationId "com.chinews.xdapp"
         minSdkVersion 21
         targetSdkVersion 30
-        versionCode 26
-        versionName "2.1 Fo Tan"
+        versionCode 27
+        versionName "2.1 Pre-release"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
