--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,6 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
-
     <uses-permission android:name="android.permission.KILL_BACKGROUND_PROCESSES" />
 
     <application
@@ -20,6 +19,7 @@
         android:theme="@style/Theme.志報新聞社"
         android:usesCleartextTraffic="true"
         tools:targetApi="m">
+        <activity android:name=".OldNews"></activity>
         <activity android:name=".Help" />
         <activity
             android:name=".Splash"
