--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,8 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.0'
     //noinspection GradleDependency
     implementation 'com.google.android.material:material:1.2.0-alpha02'
+    implementation "androidx.fragment:fragment-ktx:1.3.5"
+    implementation 'com.google.firebase:firebase-appcheck-safetynet:16.0.0-beta01'
     //noinspection GradleDependency
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0-alpha2'
     implementation 'com.google.firebase:firebase-crashlytics'
