--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,8 +18,8 @@ android {
         applicationId "com.chinews.xdapp"
         minSdkVersion 21
         targetSdkVersion 30
-        versionCode 29
-        versionName "2.1.1"
+        versionCode 30
+        versionName "2.1.2"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -45,8 +45,11 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'androidx.appcompat:appcompat:1.3.0'
     //noinspection GradleDependency
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.3'
+    //noinspection GradleDependency
+    implementation 'androidx.navigation:navigation-ui-ktx:2.3.3'
+    //noinspection GradleDependency
     implementation 'com.google.android.material:material:1.2.0-alpha02'
-    implementation "androidx.fragment:fragment-ktx:1.3.5"
     implementation 'com.google.firebase:firebase-appcheck-safetynet:16.0.0-beta01'
     //noinspection GradleDependency
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0-alpha2'
@@ -57,11 +60,11 @@ dependencies {
     implementation 'com.google.firebase:firebase-perf'
     implementation 'com.google.firebase:firebase-database:20.0.0'
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     implementation 'org.jsoup:jsoup:1.13.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'com.github.yuzhiqiang1993:zxing:2.1.4'
-    implementation "androidx.core:core-ktx:1.5.0"
+    implementation "androidx.core:core-ktx:1.6.0"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.2'
     implementation 'com.google.firebase:firebase-database-ktx'
