--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,7 +19,7 @@ android {
         minSdkVersion 21
         targetSdkVersion 30
         versionCode 30
-        versionName "2.1.2"
+        versionName "2.2 Sha Tin"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -44,13 +44,14 @@ dependencies {
     implementation 'com.google.android.gms:play-services-ads:20.2.0'
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'androidx.appcompat:appcompat:1.3.0'
+    implementation 'com.google.firebase:firebase-storage-ktx'
     //noinspection GradleDependency
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.3'
     //noinspection GradleDependency
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.3'
     //noinspection GradleDependency
     implementation 'com.google.android.material:material:1.2.0-alpha02'
-    implementation 'com.google.firebase:firebase-appcheck-safetynet:16.0.0-beta01'
+    implementation 'com.google.firebase:firebase-appcheck-safetynet:16.0.0-beta02'
     //noinspection GradleDependency
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0-alpha2'
     implementation 'com.google.firebase:firebase-crashlytics'
@@ -58,7 +59,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-messaging'
     implementation 'com.google.firebase:firebase-ads:20.2.0'
     implementation 'com.google.firebase:firebase-perf'
-    implementation 'com.google.firebase:firebase-database:20.0.0'
+    implementation 'androidx.gridlayout:gridlayout:1.0.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     implementation 'org.jsoup:jsoup:1.13.1'
@@ -68,6 +69,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.2'
     implementation 'com.google.firebase:firebase-database-ktx'
+    implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
 }
 repositories {
     mavenCentral()
