--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         android:theme="@style/Theme.志報新聞社"
         android:usesCleartextTraffic="true"
         tools:targetApi="m">
+        <activity android:name=".OldNews"></activity>
         <activity android:name=".NewsInfo" />
         <activity android:name=".LastNews" />
         <activity android:name=".Help" />
