--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,8 +18,8 @@ android {
         applicationId "com.chinews.xdapp"
         minSdkVersion 21
         targetSdkVersion 30
-        versionCode 31
-        versionName "2.2 Sha Tin"
+        versionCode 32
+        versionName "2.2 Tai Wai"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
