--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-ads:20.2.0'
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'androidx.appcompat:appcompat:1.3.0'
+    implementation("com.android.volley:volley:1.2.0")
     implementation 'com.google.firebase:firebase-storage-ktx'
     //noinspection GradleDependency
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.3'
@@ -59,7 +60,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-messaging'
     implementation 'com.google.firebase:firebase-ads:20.2.0'
     implementation 'com.google.firebase:firebase-perf'
-    implementation 'androidx.gridlayout:gridlayout:1.0.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     implementation 'org.jsoup:jsoup:1.13.1'
