--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,8 +18,8 @@ android {
         applicationId "com.chinews.xdapp"
         minSdkVersion 21
         targetSdkVersion 30
-        versionCode 32
-        versionName "2.2 Tai Wai"
+        versionCode 33
+        versionName "2.2 Kowloon Tong"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -34,6 +34,11 @@ android {
             ext.enableCrashlytics = false
         }
     }
+
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -41,28 +46,28 @@ android {
 }
 dependencies {
     implementation platform('com.google.firebase:firebase-bom:26.4.0')
-    implementation 'com.google.android.gms:play-services-ads:20.2.0'
+    implementation 'com.google.android.gms:play-services-ads:20.3.0'
     implementation 'com.google.firebase:firebase-analytics'
-    implementation 'androidx.appcompat:appcompat:1.3.0'
-    implementation("com.android.volley:volley:1.2.0")
+    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation("com.android.volley:volley:1.2.1")
     implementation 'com.google.firebase:firebase-storage-ktx'
     //noinspection GradleDependency
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.3'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
     //noinspection GradleDependency
-    implementation 'androidx.navigation:navigation-ui-ktx:2.3.3'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
     //noinspection GradleDependency
     implementation 'com.google.android.material:material:1.2.0-alpha02'
     implementation 'com.google.firebase:firebase-appcheck-safetynet:16.0.0-beta02'
     //noinspection GradleDependency
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.0-alpha2'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
     implementation 'com.google.firebase:firebase-crashlytics'
     implementation 'com.google.firebase:firebase-inappmessaging-display'
     implementation 'com.google.firebase:firebase-messaging'
-    implementation 'com.google.firebase:firebase-ads:20.2.0'
+    implementation 'com.google.firebase:firebase-ads:20.3.0'
     implementation 'com.google.firebase:firebase-perf'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    implementation 'org.jsoup:jsoup:1.13.1'
+    implementation 'org.jsoup:jsoup:1.14.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'com.github.yuzhiqiang1993:zxing:2.1.4'
     implementation "androidx.core:core-ktx:1.6.0"
