--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ plugins {
 apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion 31
     buildToolsVersion "30.0.3"
 
     lintOptions {
@@ -17,9 +17,9 @@ android {
     defaultConfig {
         applicationId "com.chinews.xdapp"
         minSdkVersion 21
-        targetSdkVersion 30
-        versionCode 33
-        versionName "2.2 Kowloon Tong"
+        targetSdkVersion 31
+        versionCode 34
+        versionName "2.2 Pre-release"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -46,9 +46,8 @@ android {
 }
 dependencies {
     implementation platform('com.google.firebase:firebase-bom:26.4.0')
-    implementation 'com.google.android.gms:play-services-ads:20.3.0'
-    implementation 'com.google.firebase:firebase-analytics'
-    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'com.google.android.gms:play-services-ads:21.0.0'
+    implementation 'androidx.appcompat:appcompat:1.4.2'
     implementation("com.android.volley:volley:1.2.1")
     implementation 'com.google.firebase:firebase-storage-ktx'
     //noinspection GradleDependency
@@ -57,14 +56,15 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
     //noinspection GradleDependency
     implementation 'com.google.android.material:material:1.2.0-alpha02'
-    implementation 'com.google.firebase:firebase-appcheck-safetynet:16.0.0-beta02'
+    implementation 'com.google.firebase:firebase-appcheck-safetynet:16.0.0'
     //noinspection GradleDependency
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
-    implementation 'com.google.firebase:firebase-crashlytics'
-    implementation 'com.google.firebase:firebase-inappmessaging-display'
-    implementation 'com.google.firebase:firebase-messaging'
-    implementation 'com.google.firebase:firebase-ads:20.3.0'
+    implementation 'com.google.firebase:firebase-inappmessaging-display-ktx'
+    implementation 'com.google.firebase:firebase-messaging-ktx'
+    implementation 'com.google.firebase:firebase-ads:21.0.0'
     implementation 'com.google.firebase:firebase-perf'
+    implementation 'com.google.firebase:firebase-crashlytics-ktx:18.2.11'
+    implementation 'com.google.firebase:firebase-analytics-ktx:20.0.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     implementation 'org.jsoup:jsoup:1.14.2'
