--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" android:maxSdkVersion="29"/>
 
     <application
         android:allowBackup="false"
@@ -20,7 +21,7 @@
         android:name=".App"
         android:usesCleartextTraffic="true"
         tools:targetApi="m">
-        <activity android:name=".VipNews"></activity>
+        <activity android:name=".VipNews" />
         <activity android:name=".OldNews" />
         <activity android:name=".NewsInfo" />
         <activity android:name=".LastNews" />
